remove common Card

--- a/src/components/common/DataTable/styles.less
+++ b/src/components/common/DataTable/styles.less
@@ -1,5 +1,9 @@
 @import "../../../styles/variables.less";
 
+.data-table-wrapper .ant-card {
+    box-shadow: 0 4px 4px #e8e8e8e8 !important;
+}
+
 .data-table-wrapper .ant-table-thead>tr>th {
     text-align: center !important;
     padding: 10px 8px !important;
